charger_refactoring pt 2

--- a/cozmo_cpp/cozmo_cpp.vcxproj
+++ b/cozmo_cpp/cozmo_cpp.vcxproj
@@ -106,12 +106,16 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\Users\nigar\Desktop\BA\VisualStudioProjekte\vcpkg-master\vcpkg-master\packages;C:\Users\nigar\AppData\Local\Programs\Python\Python36-32\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>C:\Users\nigar\AppData\Local\Programs\Python\Python36-32\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
+    <Bscmake>
+      <PreserveSbr>true</PreserveSbr>
+    </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -138,6 +142,9 @@
     <ClInclude Include="Object_cpp.h" />
     <ClInclude Include="Charger_cpp.h" />
     <ClInclude Include="Cozmo_cpp.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
